navigation links, SEO, 404 page, adding front matter comments

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,9 +6,9 @@ header-links:
   - text: Blog
     url: /blog
     sublinks:
-    - text: Travel
+    - text: Travel & Lifestyle
       url: /
-    - text: Lifestyle
+    - text: Food
       url: /
     - text: Blog
       url: /blog
