--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -46,3 +46,10 @@ footer-links:
       url: /
     - text: Work With Us
       url: /
+footer-contact:
+  heading: Company Name
+  map-link: maps.google.com
+  map-text-1: 1111 Centre Pointe Drive
+  map-text-2: City, Country
+  phone-number: +1-(612)-555-5555
+  phone-text: (612) 555-5555
